--- a/FonSpa/FonSpa/Areas/Admin/Views/BookingAdmin/Schedule.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/BookingAdmin/Schedule.cshtml
@@ -76,6 +76,10 @@
                                                     @: @services.name
                                                 }
                                             }
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id&date=@scheduleDate.ToString("MM/dd/yyyy")&time=8">EditInfo/</a>
+
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id">EditTime/</a>
+                                            <a href="/Admin/BookingAdmin/DeleteInSchedule/@booking.Id">Delete</a>
 
                                         }
                                     }
@@ -113,6 +117,10 @@
                                                     @: @services.name
                                                 }
                                             }
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id&date=@scheduleDate.ToString("MM/dd/yyyy")&time=9">EditInfo/</a>
+
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id">EditTime/</a>
+                                            <a href="/Admin/BookingAdmin/DeleteInSchedule/@booking.Id">Delete</a>
                                         }
 
 
@@ -152,7 +160,10 @@
                                                     @: @services.name
                                                 }
                                             }
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id&date=@scheduleDate.ToString("MM/dd/yyyy")&time=10">EditInfo/</a>
 
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id">EditTime/</a>
+                                            <a href="/Admin/BookingAdmin/DeleteInSchedule/@booking.Id">Delete</a>
                                         }
                                     }
                                 }
@@ -188,6 +199,10 @@
                                                     @: @services.name
                                                 }
                                             }
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id&date=@scheduleDate.ToString("MM/dd/yyyy")&time=11">EditInfo/</a>
+
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id">EditTime/</a>
+                                            <a href="/Admin/BookingAdmin/DeleteInSchedule/@booking.Id">Delete</a>
 
                                         }
                                     }
@@ -226,6 +241,10 @@
                                                     @: @services.name
                                                 }
                                             }
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id&date=@scheduleDate.ToString("MM/dd/yyyy")&time=13">EditInfo/</a>
+
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id">EditTime/</a>
+                                            <a href="/Admin/BookingAdmin/DeleteInSchedule/@booking.Id">Delete</a>
 
                                         }
                                     }
@@ -262,6 +281,10 @@
                                                     @: @services.name
                                                 }
                                             }
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id&date=@scheduleDate.ToString("MM/dd/yyyy")&time=14">EditInfo/</a>
+
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id">EditTime/</a>
+                                            <a href="/Admin/BookingAdmin/DeleteInSchedule/@booking.Id">Delete</a>
 
                                         }
                                     }
@@ -298,6 +321,10 @@
                                                     @: @services.name
                                                 }
                                             }
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id&date=@scheduleDate.ToString("MM/dd/yyyy")&time=15">EditInfo/</a>
+
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id">EditTime/</a>
+                                            <a href="/Admin/BookingAdmin/DeleteInSchedule/@booking.Id">Delete</a>
 
                                         }
                                     }
@@ -334,6 +361,10 @@
                                                     @: @services.name
                                                 }
                                             }
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id&date=@scheduleDate.ToString("MM/dd/yyyy")&time=16">EditInfo/</a>
+
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id">EditTime/</a>
+                                            <a href="/Admin/BookingAdmin/DeleteInSchedule/@booking.Id">Delete</a>
 
                                         }
                                     }
@@ -370,6 +401,10 @@
                                                     @: @services.name
                                                 }
                                             }
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id&date=@scheduleDate.ToString("MM/dd/yyyy")&time=17">EditInfo/</a>
+
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id">EditTime/</a>
+                                            <a href="/Admin/BookingAdmin/DeleteInSchedule/@booking.Id">Delete</a>
 
                                         }
                                     }
@@ -406,6 +441,10 @@
                                                     @: @services.name
                                                 }
                                             }
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id&date=@scheduleDate.ToString("MM/dd/yyyy")&time=18">EditInfo/</a>
+
+                                            <a href="/Admin/BookingAdmin/Edit?id=@booking.Id">EditTime/</a>
+                                            <a href="/Admin/BookingAdmin/DeleteInSchedule/@booking.Id">Delete</a>
 
                                         }
                                     }
