--- a/FonSpa/FonSpa/Areas/Admin/Views/Shared/_sidebar.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/Shared/_sidebar.cshtml
@@ -17,7 +17,7 @@
                     </a>
                     <ul class="sub">
                         <li><a href="/Admin/BookingAdmin/Index">List Booking</a></li>
-                        <li><a href="/Admin/BookingAdmin/Create">Add Booking</a></li>
+                        @*<li><a href="/Admin/BookingAdmin/Create">Add Booking</a></li>*@
                         <li><a href="/Admin/BookingAdmin/Schedule">Manage Schedule</a></li>
                     </ul>
                 </li>
