--- a/FonSpa/FonSpa/Views/Home/Index.cshtml
+++ b/FonSpa/FonSpa/Views/Home/Index.cshtml
@@ -288,7 +288,7 @@
                     </div>
 
                     <div class="buttons-section text-md-right">
-                        <a href="about.html" class="hun-button size-normal style-fill-color shape-round">
+                        <a href="/serviceshome" class="hun-button size-normal style-fill-color shape-round">
                             Read More
                         </a>
                     </div>
