--- a/FonSpa/FonSpa/Areas/Admin/Views/BookingAdmin/Edit.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/BookingAdmin/Edit.cshtml
@@ -28,12 +28,13 @@
                             {
                                 using (Html.BeginForm("Edit", "BookingAdmin", FormMethod.Get, new { @class = "cmxform form-horizontal", @id = "signupForm" }))
                                 {
+                                
                                     <div class="form-group">
                                         <label class="control-label col-lg-3">Arrival Day</label>
                                         <div class="col-lg-6">
                                             @*<input class="form-control " id="username" name="username" type="text">*@
 
-                                            <input required type="date" name="date" id="date" class="form-control"value="@DateTime.Now.ToString("yyyy/MM/dd")" min="@DateTime.Now.ToString("yyyy/MM/dd")" max="@DateTime.Now.AddDays(7).ToString("yyyy/MM/dd")" />
+                                            <input required type="date" name="date" id="date" class="form-control" value="@DateTime.Now.ToString("dd/MM/yyyy")" min="@DateTime.Now.ToString("dd/MM/yyyy")" max="@DateTime.Now.AddDays(7).ToString("dd/MM/yyyy")" />
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -53,7 +54,12 @@
                                             </select>
                                         </div>
                                     </div>
-
+                                    <div hidden class="form-group ">
+                                        <label for="confirm_password" class="control-label col-lg-3">Customer Id</label>
+                                        <div class="col-lg-6">
+                                            <input value="@Model.Id" class="form-control " id="Id" name="Id" type="text">
+                                        </div>
+                                    </div>
                                     <div class="form-group">
                                         <div class="col-lg-offset-3 col-lg-6">
                                             <button class="btn btn-primary" type="submit">Save</button>
@@ -68,7 +74,7 @@
                             @*<form  method="get" action="" novalidate="novalidate">*@
                             @using (Html.BeginForm("Edit", "BookingAdmin", FormMethod.Post, new { @class = "cmxform form-horizontal", @id = "signupForm" }))
                             {
-                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                @Html.ValidationSummary(false, "", new { @class = "text-danger" })
                                 if (ViewBag.emptyBedsList != null)
                                 {
                                     <div class="form-group">
@@ -95,15 +101,41 @@
                                         </div>
                                     </div>
 
-                                    <div class="form-group">
-                                        <label class="control-label col-lg-3">Customer</label>
+                                    <div class="form-group ">
+                                        <label for="confirm_password" class="control-label col-lg-3">Customer Name</label>
                                         <div class="col-lg-6">
-                                            <select id="IdCustomer" name="IdCustomer" class="form-control m-bot15">
-                                                @foreach (var customer in listCustomer)
+                                            @{ Models.Entity.Customer customer = new Models.Entity.Customer();
+                                                foreach (var item in listCustomer)
                                                 {
-                                                    <option value="@customer.id">@customer.Name - @customer.phone</option>
+                                                    if (item.id == Model.IdCustomer)
+                                                    {
+                                                        customer = item;
+                                                    }
                                                 }
-                                            </select>
+
+                                            }
+                                            <input value="@(customer == null? "": customer.Name)" required class="form-control " id="customerName" name="customerName" type="text">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group ">
+                                        <label for="confirm_password" class="control-label col-lg-3">Customer Phone</label>
+                                        <div class="col-lg-6">
+                                            <input value="@(customer == null? "": customer.phone)" pattern="(09|08|03|04|05|07|01)+([0-9]{8})\b" required class="form-control " id="customerPhone" name="customerPhone" type="text">
+                                        </div>
+                                    </div>
+
+                                    <div hidden class="form-group ">
+                                        <label for="confirm_password" class="control-label col-lg-3">Customer Id</label>
+                                        <div class="col-lg-6">
+                                            <input value="@(customer == null? "": customer.id.ToString())" class="form-control " id="IdCustomer" name="IdCustomer" type="text">
+                                        </div>
+                                    </div>
+
+                                    <div hidden class="form-group ">
+                                        <label for="confirm_password" class="control-label col-lg-3">Customer Id</label>
+                                        <div class="col-lg-6">
+                                            <input value="@Model.Id" class="form-control " id="Id" name="Id" type="text">
                                         </div>
                                     </div>
 
@@ -111,6 +143,7 @@
                                         <label class="control-label col-lg-3">Room - Bed</label>
                                         <div class="col-lg-6">
                                             <select id="IdBed" name="IdBed" class="form-control m-bot15">
+                                                <option value="@Model.IdBed">No Change</option>
                                                 @foreach (var bed in ViewBag.emptyBedsList)
                                                 {
                                                     foreach (var room in listRoom)
